hack/cip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
spec:
  type: ClusterIP
  selector:
    app: echoserver
  ports:
    - port: 80
      targetPort: 80
